Changed: using correct error response body for bad requests
